Fix spacing

--- a/src/_dev/css/components/schedules.scss
+++ b/src/_dev/css/components/schedules.scss
@@ -59,7 +59,7 @@
         }
 
         .schedules__conf-title {
-            margin-bottom: $spacer;
+            margin-bottom: 0;
 
             &.--bold {
                 margin-bottom: $spacer;
